03-argocd/homepage/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  namespace: homepage
  annotations:
    cert-manager.io/cluster-issuer: "selfsigned-issuer"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # Перезаписать Host заголовок без порта для Homepage
    nginx.ingress.kubernetes.io/upstream-vhost: "homepage.lab-home.com"
    # Аннотация для совместимости со старыми версиями ingress-nginx
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - homepage.lab-home.com
      secretName: homepage-tls
  rules:
  - host: homepage.lab-home.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homepage
            port:
              number: 80
